Closed Bug 1659077 Opened 4 years ago Closed 4 years ago

UnixFile.{readdir,*stat} is not a function

Categories

(Toolkit Graveyard :: OS.File, defect)

defect

Tracking

(firefox81 fixed)

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/04321853216c
Don't use -suffixed symbols on arm64 mac. r=Yoric
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: