Bug 1659077 - Don't use -suffixed symbols on arm64 mac. r=Yoric

Differential Revision: https://phabricator.services.mozilla.com/D87060